bdr.BDR2.scala.code
lettre match {
  case "E" => avance()
}